# python-restful-api-task

./: .gitignore  Dockerfile  Dockerfile.celery  README.md  docker-compose.yml  main.py  pyproject.toml  storage.py
data/: task_priority_model.joblib
src/: celery_app.py  main.py  tasks.csv
src/conf/: messages.py
src/database/: storage.py
src/entity/: models.py
src/ml/: ml_service.py
src/routes/: predict.py  tasks.py  users.py
tests/: test_tasks.py
